Update and rename practic.html to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         alt="Lifestyle shoes"
       />
     </div>
-    <script src="js/practice.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
