--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img
         id="lifestyle"
         class="slider__item"
-        src="images/image-1.jpg"
+        src="img/image-1.jpg"
         alt="Lifestyle shoes"
       />
     </div>
